# wfd

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
doc/: aliases.js  search-index.js  settings.html  source-files.js
doc/libc/: all.html  constant.BUFSIZ.html  constant.E2BIG.html  constant.EACCES.html  constant.EAGAIN.html  constant.EBADF.html  constant.EBUSY.html  constant.ECHILD.html  constant.EDEADLK.html  constant.EDEADLOCK.html  constant.EDOM.html  constant.EEXIST.html  constant.EFAULT.html  constant.EFBIG.html  constant.EILSEQ.html  constant.EINTR.html  constant.EINVAL.html  constant.EIO.html  constant.EISDIR.html  constant.EMFILE.html  constant.EMLINK.html  constant.ENAMETOOLONG.html  constant.ENFILE.html  constant.ENODEV.html  constant.ENOENT.html  constant.ENOEXEC.html  constant.ENOLCK.html  constant.ENOMEM.html  constant.ENOSPC.html  constant.ENOSYS.html  constant.ENOTDIR.html  constant.ENOTEMPTY.html  constant.ENOTTY.html  constant.ENXIO.html  constant.EOF.html  constant.EPERM.html  constant.EPIPE.html  constant.ERANGE.html  constant.EROFS.html  constant.ESPIPE.html  (+206 more)
doc/wfd/: all.html  constant.FOS_ALLNONSTORAGEITEMS.html  constant.FOS_ALLOWMULTISELECT.html  constant.FOS_CREATEPROMPT.html  constant.FOS_DEFAULTNOMINIMODE.html  constant.FOS_DONTADDTORECENT.html  constant.FOS_FILEMUSTEXIST.html  constant.FOS_FORCEFILESYSTEM.html  constant.FOS_FORCEPREVIEWPANEON.html  constant.FOS_FORCESHOWHIDDEN.html  (+21 more)
examples/: custom_file_types.rs  defaults.rs  folder_picker.rs  full.rs  open_multiple_selection.rs  owner.rs
src/: lib.rs
(+68 files in other folders)
